css/homepage.css
#homepage {
  height: 70vh; 
  background-color: #F5F5F5;
  background-repeat: no-repeat;
  background-position: right bottom;
  background-size: contain;
}

#homepage a{
  outline: none;
}

#homepage h2 {
  margin: 0;
  font-family: 'Nunito', sans-serif;
  color: white;
  text-align: center;
  /* offset-x | offset-y | blur-radius | color */
  text-shadow: 2px 2px 4px black;
}

#homepage-pic {
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  height: 100%;
  
  /*As much space as the navigation bar height.*/
  margin-top: 63px;

}

.homepage-flex {
  display: flex;
  flex-direction: column; 
  justify-content: center;
  align-items: center;

  /* Make this container occupy the full section' space. */
  width: 100%;
  height: 100%;

  /* Leave some space after the arrow icon*/
  padding-bottom: 20px;
}

.homepage-flex-item {
  overflow: visible;
  flex-grow: 1;
}

.center-catch-phrase{
  display: flex;
  flex-direction: column;
  /*Alignement along the main axis*/
  justify-content: center;
  align-items: center;
}

@media screen and (max-width: 899px) {
  #homepage-pic{
    background-image: url("../img/background_small.jpg");
  }
}

/* tablet-landscape-up min-width */
@media screen and (min-width: 900px) {
  #homepage-pic {
    background-image: url("../img/background_big.jpg");
  }
}

